# CPP_Smart_File_Organizer

./: CMakeLists.txt  README.md  main.cpp
cli/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/include/: FileEntry.h  FileOperation.h  FileOrganizer.h  FormatUtils.h  OperationExecutor.h  TimeUtils.h
core/src/: FileOrganizer.cpp  OperationExecutor.cpp
include/: FileEntry.hpp  FileOrganizer.h  FormatUtils.h  TimeUtils.h
src/: FileEntry.cpp  FileOperation.cpp  FileOrganizer.cpp  OperationExecutor.cpp
ui/: CMakeLists.txt  main.cpp
ui/controllers/: OrganizerController.cpp  OrganizerController.h
ui/qml/: Main.qml
